syntax = "proto3";

import "number_msg.proto";

package pb;

option go_package = "./pb";

service ArithmeticService {
	rpc GetAddititon(OperationParameters) returns (Answer){};
	rpc GetSubtraction(OperationParameters) returns (Answer){};
	rpc GetMultiplication(OperationParameters) returns (Answer){};
	rpc GetDivison(OperationParameters) returns (Answer){};

}